deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
  labels:
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/part-of: ecommerce
